--- a/src/app/styles/App.css
+++ b/src/app/styles/App.css
@@ -1,5 +1,5 @@
 body {
-  margin-top: 120px;
+  margin-top : 120px;
 }
 .container {
   margin-bottom: 100px;
@@ -18,9 +18,10 @@ body {
 .navbar-brand {
   font-size: 28px;
   font-weight: 900;
+   
 }
 .navbar-brand:hover {
-  color: brown;
+   color: brown;
 }
 .login {
   display: inline-block;
@@ -29,7 +30,7 @@ body {
 }
 
 .bg-light.orange {
-  background: #ffc107 !important;
+  background: #ffc107!important;
 }
 
 /* cart */
@@ -40,13 +41,13 @@ body {
   justify-content: space-evenly;
 }
 table {
-  width: 100%;
+  width: 100%;  
 }
 .cell {
-  text-align: center;
+ text-align: center;
 }
 .cart div {
-  margin: 0 10px;
+  margin : 0 10px;
 }
 .cart p {
   margin-top: 5px;
@@ -55,8 +56,7 @@ table {
   flex-grow: 1;
   list-style-type: none;
 }
-.cart table th,
-.cart table tr {
+.cart table th, .cart table tr {
   height: 80px;
 }
 .order-summary .list-group-item {
@@ -67,8 +67,7 @@ table {
   width: 40px;
   padding: 5px 0;
 }
-.white,
-.white:hover {
+.white, .white:hover {
   color: white;
   text-decoration: none;
 }
@@ -76,7 +75,7 @@ table {
 .sidebar ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 0; 
 }
 
 footer {
@@ -96,7 +95,7 @@ footer {
   height: 100vh;
   width: 20%;
   position: fixed;
-  right: -20%;
+  right: -20% ;
   top: 60px;
   background: #eee;
   transition: all 350ms ease-in-out;
@@ -118,7 +117,7 @@ footer {
 .remove {
   border-radius: 50%;
 }
-.flex {
+.flex  {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -165,26 +164,26 @@ footer {
   color: rgb(152, 151, 151);
 }
 .crimson {
-  color: crimson !important;
+  color: crimson!important;
 }
 .bg-crimson {
-  background-color: crimson !important;
+  background-color: crimson!important;
 }
 .red {
   border: 1px solid crimson;
 }
 @media screen and (max-width: 640px) {
   body {
-    margin-top: 360px;
+      margin-top : 360px;
   }
   .cart p {
-    margin-top: 15px;
-  }
+      margin-top: 15px;
+  } 
   .shopping-cart {
-    height: 300px;
-    width: 100%;
-    position: fixed;
-    right: 0;
-    top: 60px;
-  }
+      height: 300px;
+      width: 100%;
+      position: fixed;
+      right: 0;
+      top: 60px;
+  }  
 }
