my-ecommerce-app : update && refactoring

--- a/src/app/styles/App.css
+++ b/src/app/styles/App.css
@@ -137,6 +137,10 @@ footer {
 }
 .checkout {
   margin-top: 5px;
+  color: white!important;
+}
+.disabled {
+  opacity: .65;
 }
 .coupon {
   color: green;
